--- a/src/sample/InsertHospitalData.fxml
+++ b/src/sample/InsertHospitalData.fxml
@@ -1,21 +1,42 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import com.jfoenix.controls.JFXTextField?>
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.text.Font?>
 
 <AnchorPane prefHeight="400.0" prefWidth="400.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.InsertHospitalDataController">
     <children>
         <JFXTextField fx:id="regNum" layoutX="126.0" layoutY="50.0" promptText="Registration Number" />
-        <JFXTextField fx:id="Name" layoutX="123.0" layoutY="104.0" promptText="First Name" text="Name" />
-        <JFXTextField fx:id="Localtion" layoutX="123.0" layoutY="180.0" prefHeight="26.0" prefWidth="155.0" promptText="Personal Chamber Address (1)" text="Location" />
+        <JFXTextField fx:id="Name" layoutX="123.0" layoutY="104.0" promptText="First Name" />
         <Label layoutX="103.0" layoutY="2.0" text="Insert Hospital Data" textFill="#cd9e9e">
             <font>
                 <Font size="20.0" />
             </font>
         </Label>
         <Button layoutX="166.0" layoutY="246.0" mnemonicParsing="false" onAction="#InsertClicked" text="Insert" />
+      <HBox layoutX="3.0" layoutY="177.0" prefHeight="46.0" prefWidth="400.0">
+         <children>
+            <ChoiceBox fx:id="District" prefHeight="26.0" prefWidth="74.0">
+               <HBox.margin>
+                  <Insets left="12.0" right="30.0" top="12.0" />
+               </HBox.margin>
+            </ChoiceBox>
+            <ChoiceBox fx:id="thana" prefHeight="26.0" prefWidth="86.0">
+               <HBox.margin>
+                  <Insets right="30.0" top="12.0" />
+               </HBox.margin>
+            </ChoiceBox>
+            <JFXTextField fx:id="hospitalLoc" prefHeight="26.0" prefWidth="122.0" promptText="Location">
+               <HBox.margin>
+                  <Insets top="12.0" />
+               </HBox.margin>
+            </JFXTextField>
+         </children>
+      </HBox>
     </children>
 </AnchorPane>
