--- a/src/sample/Update.fxml
+++ b/src/sample/Update.fxml
@@ -1,14 +1,69 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import com.jfoenix.controls.JFXTextField?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ChoiceBox?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="sample.UpdateController"
-            prefHeight="400.0" prefWidth="600.0">
-
+<AnchorPane prefHeight="400.0" prefWidth="400.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.UpdateController">
+    <children>
+        <JFXTextField fx:id="regNum" layoutX="123.0" layoutY="28.0" onKeyPressed="#KeyPressed" promptText="Registration Number" />
+        <JFXTextField fx:id="firstName" layoutX="123.0" layoutY="62.0" promptText="First Name" />
+        <JFXTextField fx:id="lastName" layoutX="124.0" layoutY="97.0" promptText="Last Name" />
+        <JFXTextField fx:id="fieldOfSpecialty" layoutX="123.0" layoutY="133.0" promptText="Field Of Specialty" />
+        <Label layoutX="103.0" layoutY="2.0" text="Update Doctors Data" textFill="#cd9e9e">
+            <font>
+                <Font size="20.0" />
+            </font>
+        </Label>
+        <Button layoutX="172.0" layoutY="373.0" mnemonicParsing="false" onAction="#InsertClicked" text="Insert" />
+        <ChoiceBox fx:id="Degrees1" layoutX="16.0" layoutY="174.0" prefWidth="150.0" />
+        <ChoiceBox fx:id="Degrees2" layoutX="203.0" layoutY="174.0" prefWidth="150.0" />
+        <Label layoutX="1.0" layoutY="215.0" text="Personal Chamber Address:" AnchorPane.leftAnchor="1.0" />
+        <HBox layoutY="231.0" prefHeight="46.0" prefWidth="400.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="231.0">
+            <children>
+                <ChoiceBox fx:id="District1" prefHeight="26.0" prefWidth="74.0">
+                    <HBox.margin>
+                        <Insets left="12.0" right="30.0" top="12.0" />
+                    </HBox.margin>
+                </ChoiceBox>
+                <ChoiceBox fx:id="thana1" prefHeight="26.0" prefWidth="86.0">
+                    <HBox.margin>
+                        <Insets right="30.0" top="12.0" />
+                    </HBox.margin>
+                </ChoiceBox>
+                <JFXTextField fx:id="personalCham1" prefHeight="26.0" prefWidth="122.0" promptText="Location">
+                    <HBox.margin>
+                        <Insets top="12.0" />
+                    </HBox.margin>
+                </JFXTextField>
+            </children>
+        </HBox>
+        <HBox layoutY="283.0" prefHeight="46.0" prefWidth="400.0">
+            <children>
+                <ChoiceBox fx:id="District2" prefHeight="26.0" prefWidth="74.0">
+                    <HBox.margin>
+                        <Insets left="13.0" right="30.0" top="12.0" />
+                    </HBox.margin>
+                </ChoiceBox>
+                <ChoiceBox fx:id="thana2" prefHeight="26.0" prefWidth="86.0">
+                    <HBox.margin>
+                        <Insets right="30.0" top="12.0" />
+                    </HBox.margin>
+                </ChoiceBox>
+                <JFXTextField fx:id="personalCham2" prefHeight="26.0" prefWidth="123.0" promptText="Location">
+                    <HBox.margin>
+                        <Insets top="12.0" />
+                    </HBox.margin>
+                </JFXTextField>
+            </children>
+        </HBox>
+        <Label layoutX="16.0" layoutY="336.0" text="Works in any Hospital?" AnchorPane.topAnchor="340.0" />
+        <TextField layoutX="177.0" layoutY="331.0" prefHeight="26.0" prefWidth="155.0" promptText="Registration Number" AnchorPane.topAnchor="340.0" />
+    </children>
 </AnchorPane>
