--- a/src/sample/InsertHospitalData.fxml
+++ b/src/sample/InsertHospitalData.fxml
@@ -5,38 +5,40 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="400.0" prefWidth="400.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.InsertHospitalDataController">
+<AnchorPane prefHeight="400.0" prefWidth="458.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.InsertHospitalDataController">
     <children>
         <JFXTextField fx:id="regNum" layoutX="126.0" layoutY="50.0" promptText="Registration Number" />
-        <JFXTextField fx:id="Name" layoutX="123.0" layoutY="104.0" promptText="First Name" />
+        <JFXTextField fx:id="Name" layoutX="29.0" layoutY="104.0" prefHeight="26.0" prefWidth="341.0" promptText="Name" />
         <Label layoutX="103.0" layoutY="2.0" text="Insert Hospital Data" textFill="#cd9e9e">
             <font>
                 <Font size="20.0" />
             </font>
         </Label>
-        <Button layoutX="166.0" layoutY="246.0" mnemonicParsing="false" onAction="#InsertClicked" text="Insert" />
+        <Button layoutX="172.0" layoutY="295.0" mnemonicParsing="false" onAction="#InsertClicked" text="Insert" />
       <HBox layoutX="3.0" layoutY="177.0" prefHeight="46.0" prefWidth="400.0">
          <children>
-            <ChoiceBox fx:id="District" prefHeight="26.0" prefWidth="74.0">
+            <ChoiceBox fx:id="District" prefHeight="26.0" prefWidth="100.0">
                <HBox.margin>
-                  <Insets left="12.0" right="30.0" top="12.0" />
+                  <Insets left="50.0" right="50.0" top="12.0" />
                </HBox.margin>
             </ChoiceBox>
-            <ChoiceBox fx:id="thana" prefHeight="26.0" prefWidth="86.0">
+            <TextField fx:id="thana">
                <HBox.margin>
                   <Insets right="30.0" top="12.0" />
                </HBox.margin>
-            </ChoiceBox>
-            <JFXTextField fx:id="hospitalLoc" prefHeight="26.0" prefWidth="122.0" promptText="Location">
-               <HBox.margin>
-                  <Insets top="12.0" />
-               </HBox.margin>
-            </JFXTextField>
+            </TextField>
          </children>
       </HBox>
+      <JFXTextField fx:id="hospitalLoc" layoutX="29.0" layoutY="245.0" prefHeight="26.0" prefWidth="265.0" promptText="Location" />
+      <Label layoutX="14.0" layoutY="161.0" text="Address:">
+         <font>
+            <Font size="22.0" />
+         </font>
+      </Label>
     </children>
 </AnchorPane>
