--- a/src/sample/SearchByDoctor.fxml
+++ b/src/sample/SearchByDoctor.fxml
@@ -4,10 +4,9 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.layout.AnchorPane?>
 
-
 <AnchorPane prefHeight="400.0" prefWidth="400.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.SearchByDoctorConroller">
    <children>
-      <JFXTextField fx:id="DoctorName" layoutX="115.0" layoutY="42.0" onKeyPressed="#chapdise" prefHeight="26.0" prefWidth="147.0" promptText="Type Doctor name" stylesheets="@style.css" />
+      <JFXTextField fx:id="DoctorName" layoutX="115.0" layoutY="42.0" onKeyReleased="#KeyRealeased" prefHeight="26.0" prefWidth="147.0" promptText="Type Doctor name" stylesheets="@style.css" />
       <Button layoutX="282.0" layoutY="42.0" mnemonicParsing="false" onAction="#searchClicked" stylesheets="@style.css" text="Search" />
    </children>
 </AnchorPane>
