--- a/src/sample/Update.fxml
+++ b/src/sample/Update.fxml
@@ -10,9 +10,9 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="400.0" prefWidth="400.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.UpdateController">
+<AnchorPane prefHeight="439.0" prefWidth="443.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.UpdateController">
     <children>
-        <JFXTextField fx:id="regNum" layoutX="123.0" layoutY="28.0" onKeyPressed="#KeyPressed" promptText="Registration Number" />
+        <JFXTextField fx:id="regNum" layoutX="123.0" layoutY="28.0" onKeyPressed="#KeyPressed" onKeyReleased="#keyreleased" promptText="Registration Number" />
         <JFXTextField fx:id="firstName" layoutX="123.0" layoutY="62.0" promptText="First Name" />
         <JFXTextField fx:id="lastName" layoutX="124.0" layoutY="97.0" promptText="Last Name" />
         <JFXTextField fx:id="fieldOfSpecialty" layoutX="123.0" layoutY="133.0" promptText="Field Of Specialty" />
@@ -21,7 +21,7 @@
                 <Font size="20.0" />
             </font>
         </Label>
-        <Button layoutX="172.0" layoutY="373.0" mnemonicParsing="false" onAction="#InsertClicked" text="Insert" />
+        <Button layoutX="181.0" layoutY="393.0" mnemonicParsing="false" onAction="#updateClicked" text="Update" />
         <ChoiceBox fx:id="Degrees1" layoutX="16.0" layoutY="174.0" prefWidth="150.0" />
         <ChoiceBox fx:id="Degrees2" layoutX="203.0" layoutY="174.0" prefWidth="150.0" />
         <Label layoutX="1.0" layoutY="215.0" text="Personal Chamber Address:" AnchorPane.leftAnchor="1.0" />
@@ -32,11 +32,11 @@
                         <Insets left="12.0" right="30.0" top="12.0" />
                     </HBox.margin>
                 </ChoiceBox>
-                <ChoiceBox fx:id="thana1" prefHeight="26.0" prefWidth="86.0">
-                    <HBox.margin>
-                        <Insets right="30.0" top="12.0" />
-                    </HBox.margin>
-                </ChoiceBox>
+            <TextField fx:id="thana1">
+               <HBox.margin>
+                  <Insets right="30.0" top="12.0" />
+               </HBox.margin>
+            </TextField>
                 <JFXTextField fx:id="personalCham1" prefHeight="26.0" prefWidth="122.0" promptText="Location">
                     <HBox.margin>
                         <Insets top="12.0" />
@@ -51,11 +51,11 @@
                         <Insets left="13.0" right="30.0" top="12.0" />
                     </HBox.margin>
                 </ChoiceBox>
-                <ChoiceBox fx:id="thana2" prefHeight="26.0" prefWidth="86.0">
-                    <HBox.margin>
-                        <Insets right="30.0" top="12.0" />
-                    </HBox.margin>
-                </ChoiceBox>
+            <TextField fx:id="thana2">
+               <HBox.margin>
+                  <Insets right="30.0" top="12.0" />
+               </HBox.margin>
+            </TextField>
                 <JFXTextField fx:id="personalCham2" prefHeight="26.0" prefWidth="123.0" promptText="Location">
                     <HBox.margin>
                         <Insets top="12.0" />
@@ -64,6 +64,6 @@
             </children>
         </HBox>
         <Label layoutX="16.0" layoutY="336.0" text="Works in any Hospital?" AnchorPane.topAnchor="340.0" />
-        <TextField layoutX="177.0" layoutY="331.0" prefHeight="26.0" prefWidth="155.0" promptText="Registration Number" AnchorPane.topAnchor="340.0" />
+        <TextField fx:id="hospital" layoutX="177.0" layoutY="331.0" prefHeight="26.0" prefWidth="155.0" promptText="Registration Number" AnchorPane.topAnchor="340.0" />
     </children>
 </AnchorPane>
